--- a/myblog/templates/base.html
+++ b/myblog/templates/base.html
@@ -30,8 +30,8 @@
       <div class="container">
         <nav class="blog-nav">
           <a class="blog-nav-item active" href="{% url "index" %}">Home</a>
-          <a class="blog-nav-item" href="#">New features</a>
-          <a class="blog-nav-item" href="#">Press</a>
+          <a class="blog-nav-item" href="#">Whats this then?</a>
+          <a class="blog-nav-item" href="#">?</a>
         
           <a class="blog-nav-item" href="#">About</a>
         </nav>
@@ -57,20 +57,26 @@
             </ul>
     {% endif %}
         </div><!-- /.blog-main -->
-
+  <!--sidebars----------------------------------->
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
           <div class="sidebar-module sidebar-module-inset">
             <h4>About</h4>
-            <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+            <p>Just a regular guy with a guitar and a dream</p>
+            <p></p>
           </div>
         </div><!-- /.blog-sidebar -->
-
+         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
+          <div class="sidebar-module sidebar-module-inset">
+            <h4>About</h4>
+            <p>Just a regular guy with a guitar and a dream</p>
+            <p></p>
+          </div>
+        </div><!-- /.blog-sidebar -->
       </div><!-- /.row -->
 
     </div><!-- /.container -->
 
     <div class="blog-footer">
-      <p>Blog template built for <a href="http://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
       <p>
         <a href="#">Back to top</a>
       </p>
